theme: fixing tags for dark mode and revamped header #151 #175

--- a/static/css/variant.css
+++ b/static/css/variant.css
@@ -1,10 +1,12 @@
 :root {
-    --INTERNAL-MAIN-TITLES-H1-color: var(--MAIN-TITLES-H1-color , var(--MAIN-TEXT-color));
-    --INTERNAL-MAIN-TITLES-H2-color: var(--MAIN-TITLES-H2-color , var(--MAIN-TITLES-TEXT-color));
-    --INTERNAL-MAIN-TITLES-H3-color: var(--MAIN-TITLES-H3-color , var(--INTERNAL-MAIN-TITLES-H2-color));
-    --INTERNAL-MAIN-TITLES-H4-color: var(--MAIN-TITLES-H4-color , var(--INTERNAL-MAIN-TITLES-H3-color));
-    --INTERNAL-MAIN-TITLES-H5-color: var(--MAIN-TITLES-H5-color , var(--INTERNAL-MAIN-TITLES-H4-color));
-    --INTERNAL-MAIN-TITLES-H6-color: var(--MAIN-TITLES-H6-color , var(--INTERNAL-MAIN-TITLES-H5-color));
+    --INTERNAL-TAG-BG-color: var(--TAG-BG-color, var(--MENU-HEADER-BG-color));
+
+    --INTERNAL-MAIN-TITLES-H1-color: var(--MAIN-TITLES-H1-color, var(--MAIN-TEXT-color));
+    --INTERNAL-MAIN-TITLES-H2-color: var(--MAIN-TITLES-H2-color, var(--MAIN-TITLES-TEXT-color));
+    --INTERNAL-MAIN-TITLES-H3-color: var(--MAIN-TITLES-H3-color, var(--INTERNAL-MAIN-TITLES-H2-color));
+    --INTERNAL-MAIN-TITLES-H4-color: var(--MAIN-TITLES-H4-color, var(--INTERNAL-MAIN-TITLES-H3-color));
+    --INTERNAL-MAIN-TITLES-H5-color: var(--MAIN-TITLES-H5-color, var(--INTERNAL-MAIN-TITLES-H4-color));
+    --INTERNAL-MAIN-TITLES-H6-color: var(--MAIN-TITLES-H6-color, var(--INTERNAL-MAIN-TITLES-H5-color));
 
     --INTERNAL-BOX-TEXT-color: var(--BOX-TEXT-color);
 
@@ -188,12 +190,12 @@ pre .copy-to-clipboard-button:hover {
 }
 
 #body .tags a.tag-link {
-    background-color: var(--MENU-HEADER-BG-color);
+    background-color: var(--INTERNAL-TAG-BG-color);
     color: var(--MAIN-BG-color, #ffffff);
 }
 
 #body .tags a.tag-link:before {
-    border-right-color: var(--MENU-HEADER-BG-color);
+    border-right-color: var(--INTERNAL-TAG-BG-color);
 }
 
 #body .tags a.tag-link:after {
